# images/virtualization-artifact/pkg/controller/vi/vi_reconciler.go
@@ -133,29 +133,27 @@ func (r *Reconciler) SetupController(_ context.Context, mgr manager.Manager, ctr
 		}
 	}
 
-	if r.imageMonitorSchedule != "" {
-		lister := gc.NewObjectLister(func(ctx context.Context, now time.Time) ([]client.Object, error) {
-			viList := &v1alpha2.VirtualImageList{}
-			fieldSelector := fields.OneTermEqualSelector(indexer.IndexFieldVIByPhaseAndStorage, indexer.ReadyDVCRImage)
-			if err := mgr.GetClient().List(ctx, viList, &client.ListOptions{FieldSelector: fieldSelector}); err != nil {
-				return nil, err
-			}
-
-			objs := make([]client.Object, 0, len(viList.Items))
-			for i := range viList.Items {
-				objs = append(objs, &viList.Items[i])
-			}
-			return objs, nil
-		})
-
-		cronSource, err := gc.NewCronSource(r.imageMonitorSchedule, lister, r.log)
-		if err != nil {
-			return fmt.Errorf("failed to create cron source for image monitoring: %w", err)
+	lister := gc.NewObjectLister(func(ctx context.Context, now time.Time) ([]client.Object, error) {
+		viList := &v1alpha2.VirtualImageList{}
+		fieldSelector := fields.OneTermEqualSelector(indexer.IndexFieldVIByPhaseAndStorage, indexer.ReadyDVCRImage)
+		if err := mgr.GetClient().List(ctx, viList, &client.ListOptions{FieldSelector: fieldSelector}); err != nil {
+			return nil, err
 		}
 
-		if err := ctr.Watch(cronSource); err != nil {
-			return fmt.Errorf("failed to setup periodic image check: %w", err)
+		objs := make([]client.Object, 0, len(viList.Items))
+		for i := range viList.Items {
+			objs = append(objs, &viList.Items[i])
 		}
+		return objs, nil
+	})
+
+	cronSource, err := gc.NewCronSource(r.imageMonitorSchedule, lister, r.log)
+	if err != nil {
+		return fmt.Errorf("failed to create cron source for image monitoring: %w", err)
+	}
+
+	if err := ctr.Watch(cronSource); err != nil {
+		return fmt.Errorf("failed to setup periodic image check: %w", err)
 	}
 
 	return nil
