# openapi/doc-ru-config-values.yaml
@@ -48,13 +48,6 @@ properties:
       Параметры, для настройки deckhouse virtualization container registry.
       Внутренний сервис для хранения и кеширования образов виртуальных машин.
     properties:
-      imageMonitorSchedule:
-        type: string
-        description: |
-          Расписание cron для периодической сверки виртуальных образов и кластерных виртуальных образов, хранящихся в DVCR.
-
-          Запускает сверку для проверки существования образов в DVCR и обновления статуса ресурсов соответственно.
-          Установите пустую строку, чтобы отключить периодическую сверку.
       storage:
         description: |
           Параметры для настройки хранилища.
